--- a/learnyounode/package.json
+++ b/learnyounode/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "dependencies": {
     "async": "^0.9.0",
-    "bl": "^0.9.3"
+    "bl": "^0.9.3",
+    "through2-map": "^1.4.0"
   },
   "devDependencies": {},
   "scripts": {
